--- a/views/eventverify.ejs
+++ b/views/eventverify.ejs
@@ -12,10 +12,9 @@
     }
 </style>
 
-<script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
 <script>
 
-async function qrClick(){
+function qrClick(){
 
     Instascan.Camera.getCameras().then(function (cameras) {
         scanner.start(cameras[1]); //starts rear camera(index 0 for front)
@@ -26,8 +25,8 @@ async function qrClick(){
             alert('No Rear camera module found!');
         }
 
-    }).catch(e => {
-        alert("No camera modules found!");
+    }).catch(function (e){
+        alert('error here');
     });
     
     var scanner = new Instascan.Scanner({
@@ -73,8 +72,9 @@ async function qrClick(){
                         <h6 style="font-weight: bolder;" class="modal-title">Scan the Event ID's QR code</h6>
                     </div>
                     <div class="modal-body">
-                        <div id="preview">
-                            <video id="preview" style="display: none; border-style: solid;"></video>
+                        <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
+                        <div>
+                            <video id="preview" style="border-style: solid;"></video>
                         </div>
                     </div>
                 </div>
