--- a/views/eventverify.ejs
+++ b/views/eventverify.ejs
@@ -74,7 +74,7 @@ function qrClick(){
                     <div class="modal-body">
                         <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
                         <div>
-                            <video width="50%" height="50%" id="preview" style="border-style: solid;"></video>
+                            <video width="50%" height="150px" id="preview" style="border-style: solid;"></video>
                         </div>
                     </div>
                 </div>
