--- a/views/eventverify.ejs
+++ b/views/eventverify.ejs
@@ -40,7 +40,7 @@ function qrClick(){
         document.getElementById('tokenId').value = content;
         document.getElementById('eventVerify').submit();
 
-        window.location.href = `/eventverify`;
+        // window.location.href = `/eventverify`;
     });
 
 }
