--- a/views/eventinfo.ejs
+++ b/views/eventinfo.ejs
@@ -27,7 +27,7 @@
             <div class="alert alert-success" style="width: 255px;">
                 <div style="float: left; font-size: larger;" class="unclick">Your Event ID:&nbsp;</div>
                 <div style="margin-top: -6px;"><strong style="font-size: 27px;"><%= data.tokenId[data.rollNumbers.indexOf(rollNumber)] %> </strong></div>
-                <div id="output"></div>
+                <div class="unclick" id="output"></div>
                 <script>
                     let qrcode = new QRCode("output", {
                         text: "<%= data.tokenId[data.rollNumbers.indexOf(rollNumber)] %>",
