--- a/views/eventinfo.ejs
+++ b/views/eventinfo.ejs
@@ -24,10 +24,10 @@
     <div>
         <div>
             <% if(type === 'student' && data.rollNumbers.indexOf(rollNumber) != -1){ %>
-            <div class="alert alert-success" style="width: 255px;">
+            <div class="alert alert-success" style="width: 270px;">
                 <div style="float: left; font-size: larger;" class="unclick">Your Event ID:&nbsp;</div>
                 <div style="margin-top: -6px;"><strong style="font-size: 27px;"><%= data.tokenId[data.rollNumbers.indexOf(rollNumber)] %> </strong></div>
-                <div class="unclick" id="output"></div>
+                <div style="margin-left: 7px;" class="unclick" id="output"></div>
                 <script>
                     let qrcode = new QRCode("output", {
                         text: "<%= data.tokenId[data.rollNumbers.indexOf(rollNumber)] %>",
