--- a/views/eventverify.ejs
+++ b/views/eventverify.ejs
@@ -71,7 +71,7 @@ function qrClick(){
                         <h6 style="font-weight: bolder;" class="modal-title">Scan the Event ID's QR code</h6>
                     </div>
                     <div class="modal-body">
-                        <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
+                        <script src="https://raw.githubusercontent.com/sufyandaredevil/CDN/master/instascan.min.js"></script>
                         <div>
                             <video width="50%" height="150px" id="preview" style="border-style: solid;"></video>
                         </div>
