--- a/views/eventinfo.ejs
+++ b/views/eventinfo.ejs
@@ -4,16 +4,20 @@
     REFCON - Events
 </title>
 
+<link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap" rel="stylesheet">
+
 <script src="../js/qrcode.js"></script>
 
 <style>
-    .unclick {
+
+    .unclick{
         user-select: none;
         -moz-user-select: none;
         -khtml-user-select: none;
         -webkit-user-select: none;
         -o-user-select: none;
     }
+
 </style>
 
 <div class="jumbotron" style="padding-top: 20px;">
@@ -26,17 +30,15 @@
             <% if(type === 'student' && data.rollNumbers.indexOf(rollNumber) != -1){ %>
             <div class="alert alert-success" style="width: 270px;">
                 <div style="float: left; font-size: larger;" class="unclick">Your Event ID:&nbsp;</div>
-                <div style="margin-top: -6px;"><strong style="font-size: 27px;"><%= data.tokenId[data.rollNumbers.indexOf(rollNumber)] %> </strong></div>
-                <div style="margin-left: 7px;" class="unclick" id="output"></div>
+                <div style="margin-top: -6px;"><strong style="font-family: 'Comic Neue', cursive; font-size: 27px;"><%= data.tokenId[data.rollNumbers.indexOf(rollNumber)] %> </strong></div>
+                <div style="margin-left: 7px;" id="output"></div>
                 <script>
                     let qrcode = new QRCode("output", {
                         text: "<%= data.tokenId[data.rollNumbers.indexOf(rollNumber)] %>",
                         colorLight: "#d4edda",
                         height: 208,
                         width: 208,
-                        correctLevel: QRCode.CorrectLevel.H
                     });
-
                     qrcode.makeCode();
                 </script>
 
