--- a/views/eventspace.ejs
+++ b/views/eventspace.ejs
@@ -4,6 +4,13 @@
     REFCON - New Message
 </title>
 
+<style>
+    input[type=number]::-webkit-inner-spin-button, 
+    input[type=number]::-webkit-outer-spin-button { 
+        -webkit-appearance: none; 
+        }
+</style>
+
 <body>
     <div class="container" style="margin-top: 30px;">
 
@@ -13,7 +20,7 @@
             <h5>New Event</h5>
             <input class="form-control" autofocus required type="text" name="eventName" placeholder="Event Name">
             <textarea class="form-control" required name="eventDescription" placeholder="Event Description" rows="4"></textarea>
-            <input class="form-control" required type="text" maxlength="3" name="fee" placeholder="Registration Fee">
+            <input class="form-control" required type="number" name="fee" placeholder="Registration Fee">
             <input class="form-control" required type="text" maxlength="1" name="prizes" placeholder="No. of Credit Distribution">
             <input class="form-control" required maxlength="15" type="text" name="venue" placeholder="Venue">
 
