--- a/views/seatingorder.ejs
+++ b/views/seatingorder.ejs
@@ -150,7 +150,7 @@
 
             <div class="alert alert-info">
 
-                <table class="unclick table">
+                <table class="unclick table table-hover">
                     <th style="vertical-align : middle; text-align:center;"> Session</th>
                     <th style="vertical-align : middle; text-align:center;">Block</th>
                     <th style="vertical-align : middle; text-align:center;">[Seat No.]<font style="font-size:small;"> (Row , Column)</font></th>
