--- a/views/internalmark.ejs
+++ b/views/internalmark.ejs
@@ -17,8 +17,7 @@
     <% if(type === 'teacher'){ %>
 
     <div class="text-right">
-        <a href="/internalmarkspace" style="margin-top: 10px;margin-bottom: 10px; font-size: large; color: white;" class="btn btn-primary">Create
-            Mark Space</a>
+        <a title="Create Mark Space" href="/internalmarkspace" style="margin-top: 10px;margin-bottom: 10px; font-size: large; color: white;" class="btn btn-primary"><i class="fa fa-lg fa-plus"></i></a>
     </div>
 
     <% for(var i=(data.length-1); i >= 0; i--){ %>
