--- a/views/seatingorder.ejs
+++ b/views/seatingorder.ejs
@@ -35,9 +35,9 @@
     <% if(type === 'teacher'){ %>
         <div class="text-right">
             <% if(data.length != 0) {%>
-                <a title="Find Student's Seat" href="/seatingorderfind" style="margin-bottom: 10px; font-size: large; color: white;" class="btn btn-lg btn-primary"><i class="fa fa-search" aria-hidden="true"></i></a>
+                <a title="Find Student's Seat" href="/seatingorderfind" style="margin-bottom: 10px; font-size: large; color: white;" class="btn btn-lg btn-primary"><i class="fa fa-lg fa-search" aria-hidden="true"></i></a>
             <% } %>
-            <a title="Create Seating Space" href="/seatingorderspace" style="margin-bottom: 10px; font-size: large; color: white;" class="btn btn-lg btn-primary"><i class="fa fa-plus" aria-hidden="true"></i></a>
+            <a title="Create Seating Space" href="/seatingorderspace" style="margin-bottom: 10px; font-size: large; color: white;" class="btn btn-lg btn-primary"><i class="fa fa-lg fa-plus" aria-hidden="true"></i></a>
         </div>
 
 
