--- a/views/eventinfo.ejs
+++ b/views/eventinfo.ejs
@@ -28,14 +28,14 @@
     <div>
         <div>
             <% if(type === 'student' && data.rollNumbers.indexOf(rollNumber) != -1){ %>
-            <div class="alert alert-success" style="width: 270px;">
+            <div class="alert alert-light" style="width: 270px; color: black;">
                 <div style="float: left; font-size: larger;" class="unclick">Your Event ID:&nbsp;</div>
-                <div style="margin-top: -6px;"><strong style="font-family: 'Comic Neue', cursive; font-size: 27px;"><%= data.tokenId[data.rollNumbers.indexOf(rollNumber)] %> </strong></div>
+                <div style="margin-top: -6px;"><font style="font-family: 'Comic Neue', cursive; font-size: 27px;"><%= data.tokenId[data.rollNumbers.indexOf(rollNumber)] %> </font></div>
                 <div style="margin-left: 7px;" id="output"></div>
                 <script>
                     let qrcode = new QRCode("output", {
                         text: "<%= data.tokenId[data.rollNumbers.indexOf(rollNumber)] %>",
-                        colorLight: "#d4edda",
+                        colorLight: "#FFF",
                         height: 208,
                         width: 208,
                     });
