--- a/views/eventverify.ejs
+++ b/views/eventverify.ejs
@@ -26,7 +26,7 @@ function qrClick(){
         }
 
     }).catch(function (e){
-        alert('error here');
+        alert('No Camera module detected!');
     });
     
     var scanner = new Instascan.Scanner({
