--- a/views/seatingorder.ejs
+++ b/views/seatingorder.ejs
@@ -88,7 +88,7 @@
                     <% } %>
                     </div>
 
-                    <table class="table table-sm" style="margin-bottom: 5px;">
+                    <table class="table table-sm table-bordered" style="margin-bottom: 5px;">
                         <tr> 
                             <td align="center" style="font-size: small;">Session</td> 
                             <td align="center" style="font-size: small;">Dept / Year</td>
@@ -110,7 +110,7 @@
                         </tr> 
                     </table> 
 
-                    <table class="table table-bordered">
+                    <table class="table table-sm table-bordered">
 
                         <% var c=0; for(i=0; i<data[k].rows; i++){ %>
 
