--- a/views/seatingorderfind.ejs
+++ b/views/seatingorderfind.ejs
@@ -57,7 +57,7 @@
                 </div>
 
 
-                <table class="table table-sm" style="margin-bottom: 5px;">
+                <table class="table table-sm table-bordered" style="margin-bottom: 5px;">
                     <tr> 
                         <td align="center" style="font-size: small;">Session</td> 
                         <td align="center" style="font-size: small;">Dept / Year</td>
@@ -79,7 +79,7 @@
                     </tr> 
                 </table> 
 
-                <table class="table table-sm table-bordered">
+                <table class="table table-bordered">
 
                     <% var c=0; for(i=0; i<data.rows; i++){ %>
 
