changes made in package.json and internal mark image changed

--- a/views/overview.ejs
+++ b/views/overview.ejs
@@ -25,7 +25,7 @@
     <div onclick="location.href='/internalmark'" class="card 4">
         <div class="card_image">
             <img
-                src="https://media.gettyimages.com/photos/childs-hand-filling-in-a-multianswer-test-with-a-pencil-picture-id1178339666?s=2048x2048" />
+                src="http://spit.procampuz.com/assets/img/screenshots/entermarks.png" />
         </div>
         <div class="card_title title-black">
             <p class="unclick brandfont">Internal Marks</p>
